Reverts permgen increase post groovy upgrade